@@ -1297,7 +1297,7 @@ nuttx-0.4.1 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Updated all ARM Make.def files to work with gcc 2.4.2 (However, there are
 	  still some build issues associated with that toolchain in use of arm-elf-objcopy
 	  -- see the TODO.txt list for details)
-	* Fix problems with Z16F compilation introduced with recent changes.
+	* Fix problems with Z16F and eZ80 compilation introduced with recent changes.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
